k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: codecolab

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
        - name: codecolab-mongodb
          image: mongo:7

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongo-data
              mountPath: /data/db

      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
