k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: codecolab
spec:
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
