k8s/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: codecolab
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
